# DOCUMENT_Q-N

./: .gitignore  README.md  check_faiss.py  faiss_content.py  main.py  pyproject.toml
.claude/: settings.json
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Chat.jsx  Uploader.jsx
